@@ -14,8 +14,9 @@ package de.berlios.sventon.web.ctrl;
 import de.berlios.sventon.repository.cache.objectcache.ObjectCache;
 import de.berlios.sventon.repository.cache.objectcache.ObjectCacheKey;
 import de.berlios.sventon.repository.cache.objectcache.ObjectCacheManager;
+import de.berlios.sventon.util.EncodingUtils;
 import de.berlios.sventon.util.ImageScaler;
-import de.berlios.sventon.util.WebUtils;
+import static de.berlios.sventon.util.WebUtils.CONTENT_DISPOSITION_HEADER;
 import de.berlios.sventon.web.command.SVNBaseCommand;
 import de.berlios.sventon.web.model.UserRepositoryContext;
 import org.springframework.validation.BindException;
@@ -27,11 +28,9 @@ import javax.activation.FileTypeMap;
 import javax.imageio.ImageIO;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.IOException;
 import java.io.OutputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
 
 /**
  * Controller used when downloading single image files as thumbnails.
@@ -77,9 +76,8 @@ public final class GetThumbnailController extends AbstractSVNTemplateController 
       return null;
     }
 
-    prepareResponse(response, svnCommand);
+    prepareResponse(request, response, svnCommand);
 
-    final URL fullSizeImageUrl = createFullSizeImageURL(request);
     final boolean cacheUsed = getRepositoryConfiguration(svnCommand.getName()).isCacheUsed();
 
     ObjectCache objectCache = null;
@@ -98,7 +96,7 @@ public final class GetThumbnailController extends AbstractSVNTemplateController 
       }
     }
 
-    final byte[] thumbnailData = createThumbnail(fullSizeImageUrl);
+    final byte[] thumbnailData = createThumbnail(repository, svnCommand);
 
     if (cacheUsed) {
       // Putting created thumbnail image into the cache.
@@ -115,45 +113,36 @@ public final class GetThumbnailController extends AbstractSVNTemplateController 
   /**
    * Creates a thumbnail version of a full size image.
    *
-   * @param fullSizeImageUrl URL to the full size version of the image.
-   * @return array  of image bytes
+   * @param repository Repository
+   * @param svnCommand Command
+   * @return array of image bytes
    */
-  private byte[] createThumbnail(final URL fullSizeImageUrl) {
-    final ByteArrayOutputStream baos = new ByteArrayOutputStream();
+  private byte[] createThumbnail(final SVNRepository repository, final SVNBaseCommand svnCommand) {
+    logger.debug("Getting image file: " + svnCommand.getPath());
+    final ByteArrayOutputStream fullSizeImageData = new ByteArrayOutputStream();
+    final ByteArrayOutputStream thumbnailImageData = new ByteArrayOutputStream();
     try {
-      logger.debug("Getting full size image from url: " + fullSizeImageUrl);
-      final ImageScaler imageScaler = new ImageScaler(ImageIO.read(fullSizeImageUrl));
-      ImageIO.write(imageScaler.createThumbnail(maxThumbnailSize), imageFormatName, baos);
-    } catch (final IOException ioex) {
-      logger.warn("Unable to get thumbnail", ioex);
+      getRepositoryService().getFile(repository, svnCommand.getPath(), svnCommand.getRevisionNumber(), fullSizeImageData);
+      final ImageScaler imageScaler = new ImageScaler(ImageIO.read(new ByteArrayInputStream(
+          fullSizeImageData.toByteArray())));
+      ImageIO.write(imageScaler.createThumbnail(maxThumbnailSize), imageFormatName, thumbnailImageData);
+    } catch (final Exception ex) {
+      logger.warn("Unable to create thumbnail", ex);
     }
-    return baos.toByteArray();
+    return thumbnailImageData.toByteArray();
   }
 
   /**
    * Prepares the response by setting headers and content type.
    *
+   * @param request    Request.
    * @param response   Response.
    * @param svnCommand Command.
    */
-  protected void prepareResponse(final HttpServletResponse response, final SVNBaseCommand svnCommand) {
-    response.setHeader(WebUtils.CONTENT_DISPOSITION_HEADER, "inline; filename=\"" + svnCommand.getTarget() + "\"");
+  protected void prepareResponse(final HttpServletRequest request, final HttpServletResponse response,
+                                 final SVNBaseCommand svnCommand) {
+    response.setHeader(CONTENT_DISPOSITION_HEADER, "inline; filename=\"" + EncodingUtils.encodeFilename(svnCommand.getTarget(), request) + "\"");
     response.setContentType(mimeFileTypeMap.getContentType(svnCommand.getPath()));
-  }
-
-  /**
-   * Creates a URL string for accessing the full size image.
-   *
-   * @param request Request.
-   * @return URL.
-   * @throws MalformedURLException if unable to construct URL.
-   */
-  private URL createFullSizeImageURL(final HttpServletRequest request) throws MalformedURLException {
-    final StringBuilder urlString = new StringBuilder();
-    urlString.append(request.getRequestURL().toString().replaceFirst("/getthumbnail/", "/get/"));  //TODO: remove ugly hard-coding!
-    urlString.append("?");
-    urlString.append(request.getQueryString());
-    return new URL(urlString.toString());
   }
 
   /**
