@@ -16,7 +16,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" type="text/css" href="${pageContext.request.contextPath}/css/sventon.css">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="${pageContext.request.contextPath}/xml/${command.name}/rss${command.path}?revision=${command.revision}">
-<link rel="shortcut icon" href="${pageContext.request.contextPath}/images/favicon.ico">
+<link rel="shortcut icon" href="${pageContext.request.contextPath}/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="${pageContext.request.contextPath}/images/favicon.ico" type="image/x-icon">
 <script language="javascript" type="text/javascript">
   var contextPath = "${pageContext.request.contextPath}";
 </script>
